deploy/k8s/spog/ui/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: spog-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: spog
  name: spog-ui
spec:
  ports:
  - name: endpoint
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: spog-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: spog
  type: ClusterIP
