deploy/k8s/spog/ui/051-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: spog-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: spog
  name: spog-ui-vanity
spec:
  host: trustification.dev
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: spog-ui
    weight: 100
  wildcardPolicy: None
